--- a/style.css
+++ b/style.css
@@ -16,5 +16,12 @@ button {
 canvas {
   image-rendering:pixelated;
   image-rendering:crisp-edges;
-  width:1000px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1024px;
+  height: 768px;
+  margin-left: -512px; /* Negative half of the width */
+  margin-top: -384px; /* Negative half of the height */
 }
+
